• Fixes trailer button not showing up in pull request preview

--- a/anime-archive/src/pages/Closerlook/Closerlook.css
+++ b/anime-archive/src/pages/Closerlook/Closerlook.css
@@ -63,7 +63,7 @@
   border: none;
   outline: none;
   background: none;
-  opacity: 50%;
+  opacity: 0.5;
 }
 
 .trailer a {
